# simplified-poker-algorithm

./: .gitignore  README.md  handheld_poker.py  pi_hardware_test.py  play_poker.py  poker_ui.py  pyproject.toml
poker_ai/: __init__.py  cards.py  cli.py  evaluator.py  game.py  handheld.py  opponents.py  strategy.py  table.py  ui.py
tests/: test_cards.py  test_evaluator.py  test_game.py  test_opponents.py  test_strategy.py  test_table.py
